--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <title>M3U8 to MP4 + Player</title>
   <script src="https://cdn.jsdelivr.net/npm/hls.js@latest"></script>
+  <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <h1>Convert .m3u8 to MP4</h1>
